# exemplo-etl-aws-1

./: .gitignore  README.md  pyproject.toml
output/: movies_and_tv_shows.parquet
src/: csv_to_parquet.py  script.py
