[project]
name = "exemplo-aws-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Jefferson"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "boto3 (>=1.40.74,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "exemplo_aws_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
